@@ -4,7 +4,8 @@
 
 Version 1.4.2 -- CVS
 --------------------
-  - Nothing yet.
+  - Added feature to allow user to switch on full date display in mailboxes instead
+    of just partial date/time based on time of email, and current date.
 
 Version 1.4.1 -- 7 July 2003
 ----------------------------
